--- a/pauwebsfips-sxmph/bootstrap/overlays/default/kustomization.yaml
+++ b/pauwebsfips-sxmph/bootstrap/overlays/default/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 
 bases:
 - ../../base
+- ../../../components/applicationsets
 - ../../../components/argocdproj
 resources:
 - openshift-gitops-argocd.yaml
